--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -1015,6 +1015,12 @@ input.custom-input {
   font-size: 20px;
   user-select: none;
 
+  &.fs-1366-16 {
+    @media screen and (max-width: 1366px) {
+      font-size: 16px;
+    }
+  }
+
   input {
     position: absolute;
     opacity: 0;
@@ -1227,9 +1233,26 @@ input.custom-input {
   display: flex;
   justify-content: space-between;
 
+  @media screen and (max-width: 991px) {
+    flex-wrap: wrap;
+  }
+
+  @media screen and (max-width: 1366px) and (min-width: 576px) {
+    padding: 0 2.5rem;
+  }
+
   .details-item {
     width: 33.33%;
     padding: 0 2.5rem;
+
+    @media screen and (max-width: 1366px) {
+      padding: 0;
+      width: 31.5%;
+    }
+
+    @media screen and (max-width: 991px) {
+      width: 100%;
+    }
 
     .custom-form-control {
       margin-bottom: 1.5rem;
@@ -1237,7 +1260,6 @@ input.custom-input {
 
     .details-box {
       .box-title {
-        font-size: 14px;
         color: $color3;
       }
 
@@ -1247,6 +1269,7 @@ input.custom-input {
         border-radius: 3px;
         margin-top: 1.5rem;
         margin-bottom: 2rem;
+        height: 100%;
 
         .box-subtitle {
           position: absolute;
@@ -1264,12 +1287,19 @@ input.custom-input {
 
         .box-text {
           padding: 2rem 1.5rem 1rem;
+          height: 100%;
         }
 
         .edit {
           position: absolute;
           right: 0.75rem;
           bottom: 0.5rem;
+
+          @media screen and (max-width: 991px) {
+            top: 50%;
+            bottom: unset;
+            transform: translateY(-50%);
+          }
         }
       }
 
@@ -1515,6 +1545,52 @@ input.custom-input {
             stroke: $color1;
           }
         }
+      }
+    }
+  }
+}
+
+.uploading {
+  @media screen and (min-width: 576px) {
+    padding: 0 2.5rem;
+  }
+
+  .upload-head {
+    .file-info {
+      .file-img {
+        margin-right: 1rem;
+      }
+    }
+  }
+
+  .upload-body {
+    margin-top: 1rem;
+    position: relative;
+    height: 16px;
+    width: 100%;
+    border-radius: 25px;
+    overflow-y: hidden;
+
+    .bg {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      background-color: $color4;
+    }
+
+    .progress {
+      border-radius: 25px;
+      position: absolute;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+      background-color: $color23;
+
+      &.yellow {
+        background: $color1;
       }
     }
   }
